--- a/home_website/homepage.html
+++ b/home_website/homepage.html
@@ -36,7 +36,7 @@
                 font-family: 'Times New Roman', Times, serif;
         } 
             a { text-decoration: none; }
-            a:hover { text-decoration: underline; }
+            a:hover { text-decoration:underline; }
             #banner {
                 background-color: rgb(19, 19, 19);
                 color: white;
@@ -176,7 +176,7 @@
                    <p>A 55-year-old individual from Hubei province in China may have been the first person to have contracted COVID-19, the
                         disease caused by the new coronavirus spreading across the globe. That case dates back to Nov. 17, 2019, according to
                         the South China Morning Post.</p>
-                    <p>On February 11, 2020 the <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank" style="color:rgba(66, 73, 73,.60)">World Health Organiation</a> announced an official name for the disease that is causing the 2019
+                    <p>On February 11, 2020 the <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank" style="color:rgba(66, 73, 73,.60)">World Health Organiation[1]</a> announced an official name for the disease that is causing the 2019
                     novel coronavirus outbreak, first identified in Wuhan China. The new name of this disease is coronavirus disease 2019,
                     abbreviated as COVID-19. In COVID-19, ‘CO’ stands for ‘corona,’ ‘VI’ for ‘virus,’ and ‘D’ for disease. Formerly, this
                     disease was referred to as “2019 novel coronavirus” or “2019-nCoV” COVID-19 is caused by a coronavirus called SARS-CoV-2. Older adults and people who have severe underlying medical
@@ -186,10 +186,12 @@
                     <p> Add more...</p>
                 </div>
             <div id ="disease-names">
-                <li><h3>Bubonic Plague <em<span>&#40;Black Plague<span>&#41;</span></h3></li>
+                <li><h3>Bubonic Plague <em><span>&#40;Black Plague<span>&#41;</span></em></h3></li>
+                <img id="blackPlague_pic" src="blackPlague.jpg" width="1200" height="350" alt="micro scale picture of black plague">
             </div>
             <div id="disease-text">
-                <p>The Black Death was a devastating global epidemic of bubonic plague that struck Europe and Asia in the mid-1300s. The
+                <p>The <a href="https://www.history.com/topics/middle-ages/black-death#:~:text=The%20Black%20Death%20was%20a,the%20Sicilian%20port%20of%20Messina." target="_blank"
+                    style="color:rgba(66, 73, 73,.60)">Black Plague[2]</a> was a devastating global epidemic of bubonic plague that struck Europe and Asia in the mid-1300s. The
                 plague arrived in Europe in October 1347, when 12 ships from the Black Sea docked at the Sicilian port of Messina.
                 People gathered on the docks were met with a horrifying surprise: Most sailors aboard the ships were dead, and those
                 still alive were gravely ill and covered in black boils that oozed blood and pus.</p>
